# MVBpp

./: .gitignore  AGENTS.md  BOBBIN_PROGRESS.md  CMakeLists.txt  PLAN.md  SESSION_HANDOFF.md  handsoff.md  pyproject.toml
bindings/python/: CMakeLists.txt  mvbpp_python.cpp
bindings/python/tests/: conftest.py  test_mvbpp.py
bindings/wasm/: .gitignore  CMakeLists.txt  mvbpp_wasm.cpp  package.json
bindings/wasm/tests/: concentric_rectangular_column_one_turn.json  test_mvbpp.js
include/mvb/: BobbinBuilder.h  FR4Builder.h  MagneticBuilder.h  NamedShape.h  ProjectionDrawing.h  SectionBuilder.h  SectionDrawing.h  SpacerBuilder.h  StepExporter.h  Symmetry.h  TurnBuilder.h  Utils.h
include/mvb/shapes/: ShapeBuilder.h  ShapeC.h  ShapeE.h  ShapeEc.h  ShapeEp.h  ShapeEpx.h  ShapeEr.h  ShapeLp.h  ShapeP.h  ShapePQ.h  ShapePm.h  ShapeRM.h  ShapeT.h  ShapeU.h  ShapeUr.h  ShapeUt.h
scripts/: batch_generate_steps.py  generate_mvb_bobbins.py
src/: BobbinBuilder.cpp  FR4Builder.cpp  MagneticBuilder.cpp  ProjectionDrawing.cpp  SectionBuilder.cpp  SectionDrawing.cpp  SpacerBuilder.cpp  StepExporter.cpp  Symmetry.cpp  TurnBuilder.cpp  Utils.cpp
src/shapes/: Factory.cpp  ShapeBuilder.cpp  ShapeE.cpp  ShapeEc.cpp  ShapeEp.cpp  ShapeEpx.cpp  ShapeEr.cpp  ShapeLp.cpp  ShapeP.cpp  ShapePQ.cpp  ShapePm.cpp  ShapeRM.cpp  ShapeT.cpp  ShapeU.cpp  ShapeUr.cpp  ShapeUt.cpp
tests/: debug_bobbin.py  generate_mvbpp_steps.cpp  generate_reference_steps.py  test_all_gapped.cpp  test_all_shapes.cpp  test_core_shapes.cpp  test_integration.cpp  test_json_integration.cpp  test_main.cpp  test_mas_battery.cpp  test_step_comparison.cpp  test_symmetry.cpp  test_toroidal_topview.cpp
tests/mas_complete_fixtures/: active_clamp_forward_transformer_complete.json  boost_inductor_complete.json  buck_inductor_complete.json  common_mode_choke_complete.json  current_transformer_complete.json  isolated_buck_transformer_complete.json  isolated_buckboost_transformer_complete.json  pushpull_transformer_complete.json  single_switch_forward_transformer_complete.json  two_switch_forward_transformer_complete.json
tests/reference_steps/: reference_e_core_core.step  reference_e_core_core.stl  reference_etd49_5t.step  reference_rect_one_turn.step  reference_rect_one_turn.stl  reference_t_core_core.step  reference_t_core_core.stl
tools/: generate_mvbpp_bobbins.cpp  mvbpp_section.cpp  mvbpp_step_generator.cpp
